# tiledesk-llm

./: .dockerignore  .env.example  .gitignore  API_DOCUMENTATION.md  CHANGELOG.md  Dockerfile  Makefile  README.md  __Dockerfile_2  deploy.sh  docker-compose-vllm.yml  entrypoint.sh  log_conf.json  log_conf.yaml  package-lock.json  pyproject.toml  service_conf.yaml.template
.github/workflows/: dev.yml  docker-community-push-latest.yml  docker-image-tag-community-tag-push.yml
docker/: .env.example  .gitignore  Dockerfile.all  Dockerfile.base  Dockerfile.graphrag  Dockerfile.pdfocr  docker-compose.yml
docs/: ROADMAP.md  ROADMAP_it.md
tests/: README.md  __init__.py  conftest.py  test_conversion_api.py  test_knowledge_graph_api.py  test_main_api.py
tests/e2e/: test_knowledge_graph_falkor_e2e.py  test_rag_flow.py
tests/integration/: test_falkor_api.py  test_ingestion_api.py  test_knowledge_graph_api.py  test_knowledge_graph_falkor_integration.py  test_pdf_ocr_api.py  test_pdf_ocr_integration.py
tests/modules/: test_raptor.py
tests/regression/: test_knowledge_graph_falkor_regression.py
tests/store/: test_milvus_repository.py  test_qdrant_repository.py  test_vector_store_get_by_doc_id.py
tests/store/test_pinecone/: test_pinecone_repository.py
tests/unit/analytics/: test_events.py
tests/unit/controller/: test_controller.py
tests/unit/modules/conversion/: test_services.py
tests/unit/modules/ingestion/: test_scrape_table_integration.py  test_table_chunker.py  test_type_detector.py
tests/unit/modules/knowledge_graph/: test_knowledge_graph_services.py  test_metadata.py  test_my_changes.py  test_seed_matching.py
tests/unit/modules/knowledge_graph_falkor/: test_advanced_qa.py  test_async_falkor_repository.py  test_extraction_debug.py  test_falkor_repository.py  test_graphrag_extractor.py  test_graphrag_parser.py  test_models.py  test_services.py
tests/unit/modules/pdf_ocr/: test_pdf_ocr_services.py  test_taskiq_service.py
tests/unit/shared/: test_semantic_cache.py  test_situated_context_table.py  test_tags_query_parser.py  test_utility.py
tests/unit/tools/: test_chromium_table_extraction.py  test_document_tools_integration.py  test_local_reranker_batching.py  test_multimodal_llm_tool.py  test_pinecone_reranker.py  test_regex_custom_chunk.py  test_reranker.py  test_structured_loaders.py
tests/utils/: check_graph_status.py  check_metadata_propagation.py  check_neo4j.py  check_nodes.py  check_qdrant.py  test_neo4j.py
tilellm/: __main__.py
tilellm/agents/: document_agent_simple.py  nodes.py  shopify_agent.py  workflow.py
tilellm/analytics/: __init__.py  client.py  config.py  events.py
tilellm/controller/: agent_middleware.py  controller.py  controller_utils.py  conversion_controller.py  helpers.py  openai_controller.py
tilellm/models/: __init__.py  base.py  chat.py  chunk_metadata.py  convertion.py  document_type.py  embedding.py  graph_state.py  huggingface_utils.py  item_model.py  llm.py  scraping.py  vector_store.py
tilellm/models/schemas/: __init__.py  general_schemas.py  multimodal_content.py  repository_schemas.py  retrieval_schemas.py
tilellm/modules/: __init__.py
tilellm/modules/api_v2/: controllers.py  models.py  node_registry.py
tilellm/modules/compliance_checker/: __init__.py  controllers.py  logic.py  models.py
tilellm/modules/compliance_checker/prompts/: __init__.py  e_procurement.py  hr_assessment.py  legal_audit.py  medical_devices.py
tilellm/modules/conversion/: controllers.py
tilellm/modules/conversion/models/: convertion.py
tilellm/modules/conversion/services/: conversion_service.py
tilellm/modules/ingestion/: __init__.py  controllers.py  docx_processor.py  table_chunker.py  text_processor.py  type_detector.py
tilellm/modules/knowledge_graph/: README.md  REPORT.md  REPORT_it.md  __init__.py  controllers.py  logic.py
tilellm/modules/knowledge_graph/models/: __init__.py  models.py  schemas.py
tilellm/modules/knowledge_graph/repository/: __init__.py  repository.py
tilellm/modules/knowledge_graph/services/: __init__.py  clustering.py  community_graph_service.py  minio_storage.py  multimodal_search.py  services.py  table_qa_service.py
tilellm/modules/knowledge_graph/tools/: graphrag_extractor.py
tilellm/modules/knowledge_graph/utils/: graph_expansion.py  query_analysis.py  rrf.py
tilellm/modules/knowledge_graph_falkor/: README.md  __init__.py  config_loader.py  controllers.py  logic.py
tilellm/modules/lgraph/: __init__.py  controllers.py  logic.py
tilellm/modules/lgraph/models/: __init__.py  (+1 more)
tilellm/modules/pdf_ocr/: README.md  __init__.py  controllers.py  logic.py
tilellm/modules/raptor/: __init__.py  config_loader.py  controllers.py  orchestrator_integration.py  prompts.py
tilellm/modules/task_executor/: __init__.py  broker.py  middleware.py  tasks.py
tilellm/modules/temporal_digest/: controllers.py  logic.py
tilellm/modules/tools_registry/: controllers.py
tilellm/shared/: const.py  embedding_factory.py  llm_config.py  llm_utils.py  logging_utils.py  markdown_utils.py  mcp_prompt.py  situated_context.py  sparse_util.py  tags_query_parser.py  tiledesk_chatmodel_info.py  timed_cache.py  utility.py
tilellm/shared/cache/: __init__.py  embedding_cache.py  metrics.py  semantic_cache.py
tilellm/shared/embeddings/: embedding_client_manager.py  resilient_embeddings.py
tilellm/store/: pinecone_repository.py  pinecone_repository_base.py  pinecone_repository_pod.py  pinecone_repository_serverless.py  redis_repository.py  vector_store_repository.py
tilellm/store/graph/: __init__.py  base_graph_repository.py
tilellm/store/milvus/: milvus_repository.py
tilellm/store/pinecone/: pinecone_persistent_client.py  pinecone_repository_base.py  pinecone_repository_pod.py  pinecone_repository_serverless.py
tilellm/store/qdrant/: qdrant_repository_local.py
tilellm/tools/: __init__.py  _gpu_concurrency.py  document_tool_simple.py  document_tools.py  multimodal_llm_tool.py  reranker.py  shopify_tool.py  sparse_encoders.py  structured_loaders.py
worker/: index.js  package-lock.json  package.json
(+79 files in other folders)
